packages/typ/tests/fixtures/diagnostics/0268_fun_polymorphic_record_field_mismatch_03.ml.infer.expected
File "0268_fun_polymorphic_record_field_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0268_fun_polymorphic_record_field_mismatch_03 is not a valid module name.

File "0268_fun_polymorphic_record_field_mismatch_03.ml", line 2, characters 43-53:
2 | let bad_gamma : poly_gamma = { run_gamma = fun _ -> 2 }
                                               ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
