packages/typ/tests/fixtures/diagnostics/0268_fun_polymorphic_record_field_mismatch_03.ml
type poly_gamma = { run_gamma : 'a. 'a -> 'a }
let bad_gamma : poly_gamma = { run_gamma = fun _ -> 2 }
